--- a/src/main/resources/templates/registrar_usuario.html
+++ b/src/main/resources/templates/registrar_usuario.html
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
                 <label for="exampleFormControlFile1">Foto Usuario</label>
-                <input name="fotoPerfil" accept="image/*" required type="file" class="form-control-file" id="exampleFormControlFile1">
+                <input name="foto" accept="image/*" required type="file" class="form-control-file" id="exampleFormControlFile1">
             </div>
             <div class="form-row">
                 <div class="col-md-6 mb-3">
