--- a/src/main/resources/templates/detalle_productos.html
+++ b/src/main/resources/templates/detalle_productos.html
@@ -8,6 +8,9 @@
 <body>
 
     <div class="container mt-4">
+    
+     <h4 th:text="'Bienvenido ' + ${usuario.nombres}"></h4>
+    
         <h1>Detalle Producto</h1>
         <div class="card">
             <div class="card-body">
