--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Listado Productos</title>
+    <title>Listado de Productos</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- FontAwesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <style>
@@ -13,12 +14,14 @@
             border-radius: 50%;
             object-fit: cover;
         }
+
         .cart-icon {
             position: relative;
             font-size: 24px;
             color: #333;
             margin-left: 20px;
         }
+
         .cart-badge {
             position: absolute;
             top: -8px;
@@ -35,51 +38,66 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-light">
-    <a class="navbar-brand" th:href="@{/menu}">Lista Productos</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" th:href="@{/menu}">Lista de Productos</a>
+    <br>
+    <br>
     
-     
-  <!-- BOTON GENERAR PDF -->
-    <div class="form-inline my-2 my-lg-0 ml-auto">
-        <img th:src="${'/usuario_foto/' + foto}" alt="Profile" class="profile-pic">
-        <a class="btn btn-outline-danger ml-2" th:href="@{/logout}" role="button">Logout</a>
+    <h4 th:text="'Bienvenido ' + ${usuario.nombres}"></h4>
+    
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/registrar_producto}">Agregar Producto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_blank" th:href="@{/generar_pdf}">Generar PDF</a>
+            </li>
+            <li class="nav-item">
+                <img th:src="${'/usuario_foto/' + foto}" alt="Profile" class="profile-pic nav-link">
+            </li>
+            <li class="nav-item">
+                <a class="btn btn-outline-danger ml-2" th:href="@{/logout}" role="button">Logout</a>
+            </li>
+        </ul>
     </div>
-    
 </nav>
 
-<div class="container">	
-		<div>
-			<a th:href="@{/registrar_producto}" class="btn btn-primary">Agregar Productos</a>
-		</div>
-		
-		 <div class="text-right">
-                <a target="_blank" th:href="@{/generar_pdf}" class="btn btn-info mt-3">Generar PDF</a>
-     	</div>
-		<table class="table table-striped table-bordered">
-			<thead class="table-dark">
-				<th>Id</th>
-				<th>Nombre Producto</th>
-				<th>Precio</th>
-				<th>Stock</th>
-				<th>Categoria</th>
-			</thead>
-			<tbody>
-				<tr th:each="productos : ${listarProductos}">
-					<td th:text="${productos.prodId}"></td>
-					<td th:text="${productos.nomProd}"></td>
-					<td th:text="${productos.precioProd}"></td>
-					<td th:text="${productos.stockProd}"></td>
-					<td th:text="${productos.categoria.nomCategoria}"></td>
-			
-					<td><a th:href="@{/editar_producto/{prodId}(prodId=${productos.prodId})}" class="btn btn-primary">Editar Producto</a>
-							<a th:href="@{/detalle_producto/{prodId}(prodId=${productos.prodId})}" class="btn btn-sm btn-primary">Detalle</a>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+<div class="container mt-4">
+    <table class="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Stock</th>
+            <th scope="col">Categoría</th>
+            <th scope="col">Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="producto : ${listarProductos}">
+            <td th:text="${producto.prodId}"></td>
+            <td th:text="${producto.nomProd}"></td>
+            <td th:text="${producto.precioProd}"></td>
+            <td th:text="${producto.stockProd}"></td>
+            <td th:text="${producto.categoria.nomCategoria}"></td>
+            <td>
+                <a th:href="@{/editar_producto/{prodId}(prodId=${producto.prodId})}" class="btn btn-primary btn-sm">Editar</a>
+                <a th:href="@{/detalle_producto/{prodId}(prodId=${producto.prodId})}" class="btn btn-info btn-sm">Detalle</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<!-- Bootstrap JS and jQuery -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
 </body>
 </html>
