--- a/src/main/resources/templates/registrar_usuario.html
+++ b/src/main/resources/templates/registrar_usuario.html
@@ -12,7 +12,7 @@
         /* Puedes agregar estilos personalizados aquí */
     </style>
 
-    <title>Hello, world!</title>
+    <title>Registrar Usuario</title>
 </head>
 <body>
     <div class="container">
